--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
-.App {
-  text-align: center;
-}
+@media screen and (min-width: 256px) {
+  .App {
+    text-align: center;
+  }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  .App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
 
-.App-link {
-  color: #61dafb;
+  .App-link {
+    color: #61dafb;
+  }
 }
